Adds profile images of daniel and jerry

--- a/website/team.html
+++ b/website/team.html
@@ -40,7 +40,7 @@
             </li>
             <li class="col-12 col-md-6 col-lg-3">
                 <div class="cnt-block equal-hight" style="height: 349px;">
-                  <figure><img src="http://www.webcoderskull.com/img/team1.png" class="img-responsive" alt=""></figure>
+                  <figure><img src="imgs/jerry.jpg" class="img-responsive" alt=""></figure>
                   <h3>Jerry Qiu</h3>
                   <p>...</p>
                   <ul class="follow-us clearfix">
@@ -60,7 +60,7 @@
              </li>
             <li class="col-12 col-md-6 col-lg-3">
                 <div class="cnt-block equal-hight" style="height: 349px;">
-                  <figure><img src="http://www.webcoderskull.com/img/team2.png" class="img-responsive" alt=""></figure>
+                  <figure><img src="imgs/daniel.jpg" class="img-responsive" alt=""></figure>
                   <h3>Daniel Li</h3>
                   <p>...</p>
                   <ul class="follow-us clearfix">
